# QtFinCharts

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  format.sh
cmake/: QtFinChartsConfig.cmake.in
examples/basic/: CMakeLists.txt  Main.qml  main.cpp
examples/showcase/: CMakeLists.txt  Main.qml  main.cpp
src/qtfincharts/: CMakeLists.txt  QtFinCharts.h
src/qtfincharts/QtFinCharts/: QtFinCharts.h
src/qtfincharts/core/: ChartModel.cpp  ChartModel.h  PriceScale.cpp  PriceScale.h  SeriesModel.cpp  SeriesModel.h  TimeScale.cpp  TimeScale.h  Types.h
src/qtfincharts/quick/: AreaSeries.cpp  AreaSeries.h  BarSeries.cpp  BarSeries.h  BaselineSeries.cpp  BaselineSeries.h  CandlestickSeries.cpp  CandlestickSeries.h  ChartSeries.cpp  ChartSeries.h  ChartTheme.cpp  ChartTheme.h  ColorParsing.cpp  ColorParsing.h  FinancialChartItem.cpp  FinancialChartItem.h  HistogramSeries.cpp  HistogramSeries.h  LineSeries.cpp  LineSeries.h
